# Electra-Lang

./: .gitignore  CMakeLists.txt  ExtendingElectra.md  LICENSE  Makefile  README.md  TODO.md
.github/workflows/: Linux.yml  Mac.yml  Windows.yml
examples/: calculator.ec  cat.ec  factorial.ec  file_appending.ec  file_reading.ec  file_writing.ec  fizzbuzz.ec  hello_world.ec  including.ec  recursive_backwards_counter.ec  sad_face.ec  sqrt.ec  truth-machine.ec
examples/HQ9Plus_interpreter/: 99bottles.cpp  helloworld.cpp  hq9plus.cpp  hq9plus.ec
examples/brainfuck_interpreter/: brainfuck.ec  util.ec
examples/brainfuck_interpreter/test/: data_ptr_left_test.ec  data_ptr_right_test.ec  data_read_write.ec  decreaser_test.ec  exclamation_mark_test.ec  increaser_test.ec  stack_finder.ec
include/: ArgParser.hpp  Argparser.hpp  ArithmeticalUnit.hpp  Bomb.hpp  Cable.hpp  Cloner.hpp  CloningDynamicComponent.hpp  Component.hpp  ComponentInformation.hpp  ConditionalUnit.hpp  ConstantAdder.hpp  ConstantPusher.hpp  Current.hpp  Direction.hpp  Electra.hpp  Eraser.hpp  FileCloser.hpp  FileDescriptorManager.hpp  FileOpener.hpp  FileReader.hpp  FileWriter.hpp  Generator.hpp  Global.hpp  GlobalFunctions.hpp  Key.hpp  LineRange.hpp  Logger.hpp  Logger.inl  NonCloningDynamicComponent.hpp  Portal.hpp  Printer.hpp  Reader.hpp  Remover.hpp  Reverser.hpp  SilentException.hpp  StackChecker.hpp  StackSwitcher.hpp  StringUtilities.hpp  Swapper.hpp  direction.hpp  (+2 more)
include/components/: ArithmeticalUnit.hpp  Bomb.hpp  Cable.hpp  Cloner.hpp  CloningDynamicComponent.hpp  Component.hpp  ConditionalUnit.hpp  ConstantAdder.hpp  ConstantPusher.hpp  Eraser.hpp  FileCloser.hpp  FileOpener.hpp  FileReader.hpp  FileWriter.hpp  Key.hpp  NonCloningDynamicComponent.hpp  Portal.hpp  Printer.hpp  Reader.hpp  Reverser.hpp  StackChecker.hpp  StackSwitcher.hpp  Swapper.hpp
include/utility/: ArgParser.hpp  ComponentInformation.hpp  Global.hpp  Logger.hpp  StringUtilities.hpp
include/visualmode/: Camera.hpp  VisualInputOutputHandler.hpp  VisualModeManager.hpp  curses.hpp
src/: Argparser.cpp  ArithmeticalUnit.cpp  Bomb.cpp  Cable.cpp  Cloner.cpp  CloningDynamicComponent.cpp  Component.cpp  ConditionalUnit.cpp  ConstantAdder.cpp  ConstantPusher.cpp  Current.cpp  Direction.cpp  Electra.cpp  Eraser.cpp  FileCloser.cpp  FileDescriptorManager.cpp  FileOpener.cpp  FileReader.cpp  FileWriter.cpp  Generator.cpp  Global.cpp  GlobalFunctions.cpp  Key.cpp  LineRange.cpp  Logger.cpp  NonCloningDynamicComponent.cpp  Portal.cpp  Printer.cpp  Reader.cpp  Remover.cpp  Reverser.cpp  SilentException.cpp  StackChecker.cpp  StackSwitcher.cpp  StringUtilities.cpp  Swapper.cpp  direction.cpp  main  main.cpp  string_conversions.cpp  (+1 more)
src/components/: ArithmeticalUnit.cpp  Bomb.cpp  Cable.cpp  Cloner.cpp  CloningDynamicComponent.cpp  Component.cpp  ConditionalUnit.cpp  ConstantAdder.cpp  ConstantPusher.cpp  Eraser.cpp  FileCloser.cpp  FileOpener.cpp  FileReader.cpp  FileWriter.cpp  Key.cpp  NonCloningDynamicComponent.cpp  Portal.cpp  Printer.cpp  Reader.cpp  Reverser.cpp  StackChecker.cpp  StackSwitcher.cpp  Swapper.cpp
src/utility/: Argparser.cpp  FileDescriptorManager.cpp  Global.cpp  LineRange.cpp  Logger.cpp  StringUtilities.cpp
src/visualmode/: Camera.cpp  VisualInputOutputHandler.cpp  VisualModeManager.cpp
